# helm

./: CLAUDE.md  LICENSE  PLAN.md  README.md
backend/: .env.example  .gitignore  README.md  SOUL.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_assignment_id_to_notes.py  003_change_planned_start_to_day_of_week.py  004_update_assignment_status.py  005_add_transaction_fields.py  006_add_weekly_plans.py  007_add_pdfs_chat_brain.py  008_add_context_note_ids.py  009_add_starting_balance.py  010_simplify_weekly_plan.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  assignments.py  auth.py  budget.py  chat.py  classes.py  exams.py  notes.py  pdfs.py  time_blocks.py  transactions.py  weekly_plans.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  assignments.py  auth.py  base.py  budget.py  chat.py  classes.py  exams.py  notes.py  pdfs.py  time_blocks.py  transactions.py  user.py  weekly_plans.py
backend/app/services/: __init__.py  brain_manager.py  chat_service.py  pdf_processor.py  s3.py
backend/sql/: schema.sql
backend/tests/: __init__.py  conftest.py
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: add-assignment-dialog.tsx  add-class-dialog.tsx  brain-viewer.tsx  chat-interface.tsx  context-selector.tsx  conversation-setup.tsx  edit-class-dialog.tsx  note-editor.tsx  notes-list.tsx  notes-tree.tsx  pdf-upload.tsx
frontend/src/extensions/: math-with-markdown.ts
frontend/src/lib/: api.ts  auth.tsx
frontend/src/routes/: __root.tsx  dashboard.tsx  index.tsx
frontend/src/routes/dashboard/: assignments.tsx  board.tsx  budget.tsx  chat.tsx  classes.tsx  index.tsx  notes.tsx  odin.tsx  pdfs.tsx  plan.tsx
frontend/src/routes/dashboard/assignments/: $assignmentId.tsx  index.tsx
frontend/src/routes/dashboard/classes/: $classId.tsx  index.tsx
frontend/src/routes/dashboard/notes/: $noteId.tsx  index.tsx
(+2 files in other folders)
